--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>google-hash-code-2018</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+        </dependency>
+    </dependencies>
 </project>
